# dbt-fastapi

./: .envrc  .gitignore  .pre-commit-config.yaml  pyproject.toml
.github/workflows/: python-unit-tests.yml
dbt_project/: .user.yml
placeholder_dbt_project/: dbt_project.yml  profiles.sample.yml
src/dbt_fastapi/: config.py  dbt_manager.py  exception_handlers.py  exceptions.py  main.py  params.py
src/dbt_fastapi/routes/: __init__.py  build.py  compile.py  list.py  run.py  test.py  unsafe.py
src/dbt_fastapi/schemas/: dbt_schema.py  enums.py  request_schema.py  response_schema.py
src/dbt_fastapi_bq/: dbt_manager.py  exceptions.py  main.py  params.py  utils.py
src/dbt_fastapi_bq/api/dbt/: run.py
src/dbt_fastapi_bq/models/: dbt_models.py
src/dbt_fastapi_bq/routes/: __init__.py  test.py  unsafe.py
src/dbt_fastapi_bq/routes/dbt/: __init__.py  build.py  commands.py  run.py  test.py  unsafe.py
src/dbt_fastapi_bq/schemas/: dbt_command.py  dbt_schema.py
src/dbt_fastapi_bq/utils/: dbt_executor.py  dbt_utils.py  payload_validators.py
tests/: conftest.py
tests/unit/: test_config.py  test_dbt_manager.py  test_dbt_manager_exceptions.py  test_run_test_build.py
