[project]
name = "dbt-fastapi-bq"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Lorcan Rae", email = "lorcanrae@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "dbt-bigquery>=1.10.0",
    "fastapi>=0.116.1",
    "pydantic>=2.11.7",
    "uvicorn>=0.35.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
