[project]
name = "dbt-fastapi"
version = "0.1.0"
description = "Expose dbt CLI over FastAPI"
readme = "README.md"
authors = [{ name = "Lorcan Rae", email = "lorcanrae@gmail.com" }]
requires-python = ">=3.12"
dependencies = [
    "dbt-bigquery>=1.10.0",
    "fastapi>=0.116.1",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.11.0",
    "uvicorn>=0.35.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-benchmark>=5.2.0",
    "pytest-cov>=6.2.1",
    "pytest-mock>=3.14.1",
    "ruff>=0.12.7",
]


[tool.pytest.ini_options]
filterwarnings = [
    # Ignore dbt's deprecated datetime.utcnow() usage
    "ignore:datetime.datetime.utcnow\\(\\) is deprecated:DeprecationWarning:dbt_common.invocation",
    # Ignore dbt's deprecated Click parser usage
    "ignore:'parser.OptionParser' is deprecated:DeprecationWarning:dbt.cli.options",
    "ignore:'parser.ParsingState' is deprecated:DeprecationWarning:dbt.cli.options",
]
